did lesson 34, for loops

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -4611,6 +4611,585 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [1,2,3,4,5,6,7,8,9,10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in mylist:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for jelly in mylist:\n",
+    "    print(jelly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "for jelly in mylist:\n",
+    "    print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Odd Number: 1\n",
+      "2\n",
+      "Odd Number: 3\n",
+      "4\n",
+      "Odd Number: 5\n",
+      "6\n",
+      "Odd Number: 7\n",
+      "8\n",
+      "Odd Number: 9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in mylist:\n",
+    "    # Check for even\n",
+    "    if num % 2 == 0:\n",
+    "        print(num)\n",
+    "    else:\n",
+    "        print(f'Odd Number: {num}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_sum = 0\n",
+    "\n",
+    "for num in mylist:\n",
+    "    list_sum = list_sum + num\n",
+    "\n",
+    "print(list_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n",
+      "15\n",
+      "21\n",
+      "28\n",
+      "36\n",
+      "45\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_sum = 0\n",
+    "\n",
+    "for num in mylist:\n",
+    "    list_sum = list_sum + num\n",
+    "    print(list_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "W\n",
+      "o\n",
+      "r\n",
+      "l\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystring = \"Hello World\"\n",
+    "\n",
+    "for letter in mystring:\n",
+    "    print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "W\n",
+      "o\n",
+      "r\n",
+      "l\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "for letter in \"Hello World\":\n",
+    "    print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "W\n",
+      "o\n",
+      "r\n",
+      "l\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ghghg in \"Hello World\":\n",
+    "    print(ghghg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n",
+      "Cool!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in \"Hello World\":\n",
+    "    print(\"Cool!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup = (1,2,3)\n",
+    "\n",
+    "for item in tup:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [(1,2),(3,4),(5,6),(7,8)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(3, 4)\n",
+      "(5, 6)\n",
+      "(7, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in mylist:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (a,b) in mylist:\n",
+    "    print(a)\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (a,b) in mylist:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a,b in mylist:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a,b in mylist:\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [(1,2,3),(5,6,7),(8,9,10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(5, 6, 7)\n",
+      "(8, 9, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in mylist:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a,b,c in mylist:\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k1\n",
+      "k2\n",
+      "k3\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'k1':1,'k2':2,'k3':3}\n",
+    "\n",
+    "for item in d:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('k1', 1)\n",
+      "('k2', 2)\n",
+      "('k3', 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in d.items():\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,value in d.items():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in d.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
