--- a/notes.ipynb
+++ b/notes.ipynb
@@ -6646,6 +6646,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coding Exercise 19: Functions #10: skyline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aNtHrOpOmOrPhIsM'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc(s):\n",
+    "    lowerstring = s.lower()\n",
+    "    upperstring = s.upper()\n",
+    "    lowletters = list(lowerstring)\n",
+    "    upletters = list(upperstring)\n",
+    "    lower = lowletters[0::2]\n",
+    "    upper = upletters[1::2]\n",
+    "    string = zip(lower[0::], upper[0::])\n",
+    "    newstring = [''.join(i) for i in string] \n",
+    "    new = ''.join(newstring)\n",
+    "    return new\n",
+    "\n",
+    "myfunc('Anthropomorphism')            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -6655,21 +6713,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
