finished function practice exercises

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -6548,7 +6548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6557,7 +6557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6566,7 +6566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -6575,7 +6575,7 @@
        "[1, 2, 3, 4]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6586,7 +6586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -6595,7 +6595,7 @@
        "4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6606,7 +6606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -6615,7 +6615,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6626,8 +6626,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -6635,14 +6637,616 @@
      "text": [
       "Help on built-in function insert:\n",
       "\n",
-      "insert(...)\n",
-      "    L.insert(index, object) -- insert object before index\n",
+      "insert(index, object, /) method of builtins.list instance\n",
+      "    Insert object before index.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "help(mylist.insert)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 41. Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def name_function():\n",
+    "\n",
+    "    '''\n",
+    "\n",
+    "    DOCSTRING: Information about the function\n",
+    "\n",
+    "    INPUT: no input...\n",
+    "\n",
+    "    OUTPUT: Hello  ..\n",
+    "\n",
+    "    '''\n",
+    "\n",
+    "    print('Hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function name_function in module __main__:\n",
+      "\n",
+      "name_function()\n",
+      "    DOCSTRING: Information about the function\n",
+      "    \n",
+      "    INPUT: no input...\n",
+      "    \n",
+      "    OUTPUT: Hello  ..\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(name_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Jose\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_hello(name='NAME'):\n",
+    "\n",
+    "    print('hello ' + name)\n",
+    "\n",
+    "say_hello('Jose')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello NAME\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def say_hello(name='NAME'):\n",
+    "\n",
+    "    return 'hello ' + name\n",
+    "\n",
+    "result = say_hello('Zach')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello Zach'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(n1,n2):\n",
+    "\n",
+    "    return n1+n2\n",
+    "\n",
+    "result = add(20,30)\n",
+    "\n",
+    "result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find out if the word \"dog\" is in a string?\n",
+    "\n",
+    "def dog_check(s):\n",
+    "\n",
+    "    if 'dog' in s:\n",
+    "\n",
+    "        return True\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "dog_check('My dog ran away')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dog_check('My cat ran away')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dog_check('Dog ran away')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def dog_check(s):\n",
+    "\n",
+    "    if 'dog' in s.lower():\n",
+    "\n",
+    "        return True\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "dog_check('Dog ran away')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'dog' in 'dog ran away'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def dog_check(s):\n",
+    "\n",
+    "    return 'dog' in s.lower()\n",
+    "\n",
+    "dog_check('Dog ran away')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ordway'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# PIG LATIN\n",
+    "\n",
+    "# if word starts with a vowel, add 'ay' to end\n",
+    "\n",
+    "# if not, put first letter at end then add 'ay'\n",
+    "\n",
+    "\n",
+    "def pig_latin(word):\n",
+    "\n",
+    "    first_letter = word[0]\n",
+    "\n",
+    "    # check if vowel\n",
+    "\n",
+    "    if first_letter in 'aeiou':\n",
+    "\n",
+    "        pig_word = word + 'ay'\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        pig_word = word[1:] + first_letter + 'ay'\n",
+    "\n",
+    "    return pig_word\n",
+    "\n",
+    "pig_latin('word')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'appleay'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pig_latin('apple')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 43. args and kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc(a,b):\n",
+    "\n",
+    "    # returns 5% of the sum of a and b\n",
+    "\n",
+    "    return sum((a,b)) * 0.05\n",
+    "\n",
+    "myfunc(40,60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc(a,b,c=0,d=0,e=0):\n",
+    "\n",
+    "    # returns 5% of the sum of a and b\n",
+    "\n",
+    "    return sum((a,b,c,d,e)) * 0.05\n",
+    "\n",
+    "myfunc(40,60,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc(*args):\n",
+    "\n",
+    "    return sum(args) * 0.05\n",
+    "\n",
+    "myfunc(40,60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.75"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc(40,60,100,1,34)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(40, 60, 100, 1, 34)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc(*args):\n",
+    "\n",
+    "    print(args)\n",
+    "\n",
+    "myfunc(40,60,100,1,34)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "60\n",
+      "100\n",
+      "1\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc(*args):\n",
+    "\n",
+    "    for item in args:\n",
+    "\n",
+    "        print(item)\n",
+    "\n",
+    "myfunc(40,60,100,1,34)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fruit': 'apple'}\n",
+      "My fruit of choice is apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc(**kwargs):\n",
+    "\n",
+    "    print(kwargs)\n",
+    "\n",
+    "    if 'fruit' in kwargs:\n",
+    "\n",
+    "        print('My fruit of choice is {}'.format(kwargs['fruit']))\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        print('I did not find any fruit here')\n",
+    "\n",
+    "myfunc(fruit='apple')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fruit': 'apple', 'veggie': 'lettuce'}\n",
+      "My fruit of choice is apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "myfunc(fruit='apple',veggie='lettuce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20, 30)\n",
+      "{'fruit': 'orange', 'food': 'eggs', 'animal': 'dog'}\n",
+      "I would like 10 eggs\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc(*args,**kwargs):\n",
+    "\n",
+    "    print(args)\n",
+    "\n",
+    "    print(kwargs)\n",
+    "\n",
+    "    print('I would like {} {}'.format(args[0],kwargs['food']))\n",
+    "\n",
+    "myfunc(10,20,30,fruit='orange',food='eggs',animal='dog')\n"
    ]
   },
   {
